# ARMsAUV

armsauv_control/: CMakeLists.txt  README.md  SlideModelParamTest.md  armsauv_control.cpp  armsauv_control_copy.cpp  auvModel.h  package.xml  sm_ctrl.cpp  smc.c
armsauv_control/include/armsauv_control/: auvModel.h  base_los_controller.h  clf_los_controller.h  common.h  smc.h
armsauv_control/src/: armsauv_control_pid.cpp  armsauv_control_pid_usblnotraw.cpp  clf_los_controller.cpp  common.cpp
armsauv_description/: CMakeLists.txt  README.md  package.xml  论文模型.docx
armsauv_description/frame/: frames.gv
armsauv_description/launch/: upload.launch  upload_another_auv.launch  upload_prototype.launch  upload_underwater.launch
armsauv_description/meshes/: aft_fin.dae  body.dae  front_fin.dae  propeller.dae
armsauv_description/meshes/sensors/: mono_camera.dae
armsauv_description/robots/: default.xacro  default_prototype.xacro
armsauv_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
armsauv_description/urdf/prototype/: base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
armsauv_docking/: CMakeLists.txt  package.xml
armsauv_docking/frame/: frames.gv
armsauv_docking/include/armsauv_docking/: common.h  docking_recorder.h  file_writer.h  usbl_notraw_simulator.h  usbl_simulator.h
armsauv_docking/launch/: ocean_waves.launch
armsauv_docking/record/: docking_record_2020-Dec-23.txt  docking_record_2020-Sep-26.txt
armsauv_docking/scripts/: arm_odom_generator.py  auv_odom_generator.py  docking_demo.py  docking_observer.py  usbl_generator.py  usbl_simulator.py
armsauv_docking/src/: common.cpp  docking_recorder.cpp  docking_recorder_node.cpp  file_writer.cpp  usbl_notraw_simulator.cpp  usbl_notraw_simulator_node.cpp  usbl_simulator.cpp  usbl_simulator_node.cpp
armsauv_docking/worlds/: ocean_waves.world
armsauv_maneuverability/: CMakeLists.txt  armsauv_maneuverability.cpp  package.xml
armsauv_msgs/: CMakeLists.txt  package.xml
armsauv_msgs/msg/: Altimeter.msg  AuvCtrlInfo.msg  Usbl.msg  UsblNotRaw.msg  Vision.msg
armsauv_sim/: CMakeLists.txt  README.md  package.xml
armsauv_sim/launch/: armsauv_cirs.launch  armsauv_seafloor.launch  armsauv_shipwreck.launch  block_cirs.launch  hkauv_cirs.launch  hkauv_shipwreck.launch
armsauv_sim/launch/terrain_launch/: shipwreck.launch
armsauv_sim/model/shipwreck/: shipwreck.sdf
armsauv_sim/scenes/: :wq  armsauv_cirs.xml  armsauv_seafloor.xml  armsauv_shipwreck.xml  block_cirs.xml  hkauv_cirs.xml  hkauv_shipwreck.xml
docking_disturbance_analysis/: README.md  auv_to_world.m  control.m  disturb_cal.m  disturb_cal_comp.m  disturb_cal_gaussian.m  disturb_cal_latest.m  disturb_gen.m  disturb_gen_comp.m  disturb_gen_gaussian.m  disturb_gen_latest.m  disturbance_dynamic.m  dynamic.m  main.m  main_1.m  main_1_comp.m  main_1_gaussian.m  main_2.m  main_2_comp.m  main_2_gaussian.m  main_latest.m  main_latest_01.m  main_test1.m  main_test2.m  points_on_auv.m  sat.m
docking_disturbance_analysis/scene_n1/: params.txt
docking_disturbance_analysis/scene_n2/: params.txt
docking_disturbance_analysis/scene_n3/: params.txt
