<?xml version="1.0"?>
<package format="2">
  <name>armsauv_control</name>
  <version>0.0.0</version>
  <description>The armsauv_control package</description>

  <maintainer email="me@ztluo.dev">ztluo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>armsauv_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>uuv_gazebo_ros_plugins_msgs</build_export_depend>
  <build_export_depend>genmsg</build_export_depend>
  <build_export_depend>armsauv_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>armsauv_msgs</exec_depend>
  
  <export>

  </export>
</package>
